# store-v2

./: .env  alembic.ini  main.py  pyproject.toml
core/: base.py  database.py  settings.py
migrations/: env.py
migrations/versions/: 2023-06-13_create_db.py  2023-06-14_create_db.py  2023-06-16_add_driver_is_in_devices.py  2023-06-16_fix_devices.py  2023-06-16_fix_type_devices.py  2023-06-17_create_db.py  2023-06-17_fix_rmk.py  2023-06-19_fix_rmk.py  a0700392a4a8_fix.py
src/devices/: model.py  router.py  schema.py  services.py
src/drivers/: model.py  router.py  schema.py  services.py
src/quantity_products/: model.py  router.py  schema.py  service.py
src/rmk/: model.py  router.py  schema.py  service.py
src/store/: model.py  router.py  schema.py  service.py  services.py
src/type_device/: model.py  route.py  router.py  schema.py  service.py  services.py
tests/: conftest.py  test_quantity_products.py  test_store.py
tests/store/: test_store.py
