[tool.poetry]
name = "servicestore"
version = "0.1.0"
description = ""
authors = ["Vadim <yagofarov.vadim@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.96.0"}
alembic = "1.7.4"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
